# advent-of-rust

./: .gitignore  Cargo.toml  README.md  bun.lockb  package.json  start.ts
2024/1/: Cargo.toml  README.md
2024/1/src/: main.rs
2024/10/: Cargo.toml  README.md
2024/10/src/: main.rs
2024/11/: Cargo.toml  README.md
2024/11/src/: main.rs
2024/12/: Cargo.toml  README.md
2024/12/src/: main.rs
2024/13/: Cargo.toml  README.md
2024/13/src/: main.rs
2024/14/: Cargo.toml  README.md
2024/14/src/: main.rs
2024/15/: Cargo.toml  README.md
2024/15/src/: main.rs
2024/16/: Cargo.toml  README.md
2024/16/src/: main.rs
2024/17/: Cargo.toml  README.md
2024/17/src/: main.rs
2024/18/: Cargo.toml  README.md
2024/18/src/: main.rs
2024/19/: Cargo.toml  README.md
2024/19/src/: main.rs
2024/2/: Cargo.toml  README.md
2024/2/src/: main.rs
2024/20/: Cargo.toml  README.md
2024/20/src/: main.rs
2024/21/: Cargo.toml  README.md
2024/21/src/: main.rs
2024/22/: Cargo.toml  README.md
2024/22/src/: main.rs
2024/23/: Cargo.toml  README.md
2024/23/src/: main.rs
2024/24/: Cargo.toml  README.md
2024/24/src/: main.rs
2024/25/: Cargo.toml  README.md
2024/25/src/: main.rs
2024/3/: Cargo.toml  README.md
2024/3/src/: main.rs
2024/4/: Cargo.toml  README.md
2024/4/src/: main.rs
2024/5/: Cargo.toml  README.md
2024/5/src/: main.rs
2024/6/: Cargo.toml  README.md
2024/6/src/: main.rs
2024/7/: Cargo.toml  README.md
2024/7/src/: main.rs
2024/8/: Cargo.toml  README.md
2024/9/: Cargo.toml  README.md
src/: scraper.ts
(+2 files in other folders)
