[workspace]
members = [
"2024/8",
  "2024/17",
  "2024/5",
  "2024/1",
  "2024/18",
  "2024/3",
  "2024/21",
  "2024/4",
  "2024/14",
  "2024/13",
  "2024/6",
  "2024/7",
  "2024/24",
  "2024/16",
  "2024/25",
  "2024/12",
  "2024/2",
  "2024/15",
  "2024/22",
  "2024/23",
  "2024/20",
  "2024/10",
  "2024/9",
  "2024/11",
  "2024/19"
]